# dolphin-insync-plugin-plasma-6

./: CMakeLists.txt  README.md  insyncdolphinpluginhelper.cpp  insyncdolphinpluginhelper.hpp  insyncfileitemaction.cpp  insyncfileitemaction.hpp  insyncoverlayicon.cpp  insyncoverlayicon.hpp
debian/: changelog  control  copyright
